commit before updating my branch because of changes